@@ -121,10 +121,6 @@ fun PreviewScreenshotTestEngineInput.copyJvmArgsTo(addJvmArgFunc: (String) -> Un
     //Force the locale to en-US to ensure consistent resource parsing.
     addJvmArgFunc("-Duser.language=en")
     addJvmArgFunc("-Duser.country=US")
-    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
-        // Required by LayoutLib.
-        addJvmArgFunc("-Djava.security.manager=allow")
-    }
     addJvmArgFunc("-Dlayoutlib.thread.profile.slow-rendering.enable=false")
 
     addJvmArgFunc(toJvmTestEngineParam(
